--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@ html {
 }
 
 body {
-  background-image: url("./images/bg-hero-mobile.svg");
   font-size: 18px;
   margin: 0 auto;
+  height: 100vh;
   width: 90%;
 }
 
@@ -27,11 +27,14 @@ h1, h2, h3, h4, h5, p {
 
 /** Header **/
 header {
-  margin-top: 20px;
+  margin-top: 25px;
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 header img {
-  margin-right: 85px;
-  width: 120px;
+  height: 17px;
 }
 header a {
   color: hsl(192deg, 100%, 9%);
@@ -46,6 +49,35 @@ header a {
   -webkit-box-shadow: 0px 0px 26px -11px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 26px -11px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 26px -11px rgba(0, 0, 0, 0.75);
+}
+
+/** Section 1 **/
+.section-1-info {
+  font-family: "Open Sans", sans-serif;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.section-1-info h1 {
+  color: hsl(192deg, 100%, 9%);
+  font-size: 25px;
+  margin-bottom: 30px;
+  line-height: 35px;
+}
+.section-1-info p {
+  color: hsl(192deg, 100%, 9%);
+  line-height: 28px;
+  margin-bottom: 40px;
+  font-weight: 400;
+  font-size: 18px;
+}
+.section-1-info a {
+  color: white;
+  font-size: 12px;
+  font-weight: 600;
+  background-color: hsl(322deg, 100%, 66%);
+  border-radius: 30px;
+  padding: 10px 60px;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=styles.css.map */
