--- a/styles.scss
+++ b/styles.scss
@@ -18,9 +18,11 @@ html {
   }
 
 body {
-    background-image: url("./images/bg-hero-mobile.svg");
+    // background-image: url("./images/bg-hero-mobile.svg");
+    // background-repeat: no-repeat;
     font-size: 18px;
     margin: 0 auto;
+    height: 100vh;
     width: 90%;
 }
 
@@ -35,11 +37,14 @@ h1, h2, h3, h4, h5, p {
 /** Header **/
 
 header {
-    margin-top: 20px;
+    margin-top: 25px;
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     img {
-        margin-right: 85px;
-        width: 120px;
+        height: 17px;
     }
 
     a {
@@ -55,5 +60,39 @@ header {
         -webkit-box-shadow: 0px 0px 26px -11px rgba(0,0,0,0.75);
         -moz-box-shadow: 0px 0px 26px -11px rgba(0,0,0,0.75);
         box-shadow: 0px 0px 26px -11px rgba(0,0,0,0.75);
+    }
+}
+
+/** Section 1 **/
+
+.section-1-info {
+
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    margin-bottom: 30px;
+    
+    h1 {
+        color: $very-dark-cyan;
+        font-size: 25px;
+        margin-bottom: 30px;
+        line-height: 35px;
+    }
+
+    p {
+        color: $very-dark-cyan;
+        line-height: 28px;
+        margin-bottom: 40px;
+        font-weight: 400;
+        font-size: 18px;
+    }
+
+    a {
+        color: white;
+        font-size: 12px;
+        font-weight: 600;
+        background-color: $pink;
+        border-radius: 30px;
+        padding: 10px 60px;
+        text-decoration: none;
     }
 }
