--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,10 @@ html {
 }
 
 body {
+  background-image: url("./images/bg-hero-mobile.svg");
+  background-repeat: no-repeat;
   font-size: 18px;
   margin: 0 auto;
-  height: 100vh;
   width: 90%;
 }
 
@@ -28,7 +29,7 @@ h1, h2, h3, h4, h5, p {
 /** Header **/
 header {
   margin-top: 25px;
-  margin-bottom: 100px;
+  margin-bottom: 85px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -52,10 +53,13 @@ header a {
 }
 
 /** Section 1 **/
+.section-1 {
+  text-align: center;
+}
+
 .section-1-info {
   font-family: "Open Sans", sans-serif;
-  text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
 }
 .section-1-info h1 {
   color: hsl(192deg, 100%, 9%);
@@ -78,6 +82,146 @@ header a {
   border-radius: 30px;
   padding: 10px 60px;
   text-decoration: none;
+}
+.section-1-info a:hover {
+  background-color: #ff9bdb;
+}
+
+.section-1 img {
+  width: 90%;
+}
+
+/** Section 2 **/
+.section-2 {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 140px;
+}
+
+.section-2-info {
+  border: 1px solid #f2f2f2;
+  border-radius: 15px;
+  padding: 50px 45px 25px 45px;
+  margin-bottom: 20px;
+  margin-top: 40px;
+  -webkit-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
+}
+.section-2-info img {
+  width: 100%;
+}
+.section-2-info h3 {
+  font-family: "Poppins", sans-serif;
+  color: hsl(192deg, 100%, 9%);
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+.section-2-info p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+  line-height: 23px;
+  color: hsl(208deg, 11%, 55%);
+}
+
+/** Community Div **/
+.community {
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  border: 1px solid #f2f2f2;
+  border-radius: 15px;
+  padding: 50px 2px;
+  margin-bottom: 20px;
+  -webkit-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
+}
+.community h3 {
+  color: hsl(192deg, 100%, 9%);
+  margin-bottom: 40px;
+  font-size: 18px;
+}
+.community a {
+  color: white;
+  font-size: 11.5px;
+  letter-spacing: 0.5px;
+  font-weight: 600;
+  background-color: hsl(322deg, 100%, 66%);
+  border-radius: 30px;
+  padding: 13px 50px;
+  text-decoration: none;
+  -webkit-box-shadow: 0px 7px 13px -11px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 7px 13px -11px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 7px 13px -11px rgba(0, 0, 0, 0.75);
+}
+.community a:hover {
+  background-color: #ff9bdb;
+}
+
+/** Footer Contact**/
+footer {
+  background-color: #08242c;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  line-height: 25px;
+}
+footer p {
+  color: white;
+  font-size: 18px;
+}
+footer a {
+  color: white;
+}
+
+.contact-container {
+  margin-bottom: 60px;
+}
+
+.footer-contact {
+  display: flex;
+  margin-bottom: 30px;
+}
+.footer-contact img {
+  height: 20px;
+  width: 20px;
+  margin-right: 25px;
+  margin-top: 4px;
+}
+
+/** Footer Links **/
+.footer-link {
+  display: flex;
+  flex-direction: column;
+}
+.footer-link a {
+  margin-bottom: 20px;
+  text-decoration: none;
+}
+
+/** Footer Socials **/
+.socials {
+  display: flex;
+  flex-direction: column;
+}
+.socials p {
+  font-size: 13px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.socials-image {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.socials-image a {
+  text-decoration: none;
+}
+.socials-image img {
+  color: white;
+  height: 30px;
+  width: 30px;
 }
 
 /*# sourceMappingURL=styles.css.map */
