--- a/styles.scss
+++ b/styles.scss
@@ -18,11 +18,11 @@ html {
   }
 
 body {
-    // background-image: url("./images/bg-hero-mobile.svg");
-    // background-repeat: no-repeat;
+    background-image: url("./images/bg-hero-mobile.svg");
+    background-repeat: no-repeat;
     font-size: 18px;
     margin: 0 auto;
-    height: 100vh;
+    // height: 100vh;
     width: 90%;
 }
 
@@ -34,11 +34,17 @@ h1, h2, h3, h4, h5, p {
     margin: 0;
 }
 
+// .container {
+//     background-color: #edfaff;
+//     width: 90%;
+//     margin: 0 auto;
+// }
+
 /** Header **/
 
 header {
     margin-top: 25px;
-    margin-bottom: 100px;
+    margin-bottom: 85px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -65,12 +71,14 @@ header {
 
 /** Section 1 **/
 
-.section-1-info {
-
-    font-family: 'Open Sans', sans-serif;
+.section-1 {
     text-align: center;
-    margin-bottom: 30px;
-    
+}
+
+.section-1-info {
+    font-family: 'Open Sans', sans-serif;
+    margin-bottom: 60px;
+
     h1 {
         color: $very-dark-cyan;
         font-size: 25px;
@@ -94,5 +102,171 @@ header {
         border-radius: 30px;
         padding: 10px 60px;
         text-decoration: none;
+
+        &:hover {
+            background-color: #ff9bdb;
+        }
+    }
+
+}
+
+.section-1 {
+    img {
+        width: 90%;
+    }
+}
+
+/** Section 2 **/
+
+.section-2 {
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 140px;
+}
+
+.section-2-info {
+
+    border: 1px solid #f2f2f2;
+    border-radius: 15px;
+    padding: 50px 45px 25px 45px;
+    margin-bottom: 20px;
+    margin-top: 40px;
+    -webkit-box-shadow: 0px 0px 13px -9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 13px -9px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 13px -9px rgba(0,0,0,0.75);
+
+    img {
+        width: 100%;
+    }
+
+    h3 {
+        font-family: 'Poppins', sans-serif;
+        color: $very-dark-cyan;
+        margin-top: 50px;
+        margin-bottom: 20px;
+    }
+
+    p {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 15px;
+        line-height: 23px;
+        color: $grayish-blue;
+        
+    }
+}
+
+/** Community Div **/
+
+.community {
+
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    border: 1px solid #f2f2f2;
+    border-radius: 15px;
+    padding: 50px 2px;
+    margin-bottom: 20px;
+    -webkit-box-shadow: 0px 0px 13px -9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 13px -9px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 13px -9px rgba(0,0,0,0.75);
+
+    h3 {
+        color: $very-dark-cyan;
+        margin-bottom: 40px;
+        font-size: 18px;
+    }
+
+    a {
+        color: white;
+        font-size: 11.5px;
+        letter-spacing: .5px;
+        font-weight: 600;
+        background-color: $pink;
+        border-radius: 30px;
+        padding: 13px 50px;
+        text-decoration: none;
+        -webkit-box-shadow: 0px 7px 13px -11px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 7px 13px -11px rgba(0,0,0,0.75);
+        box-shadow: 0px 7px 13px -11px rgba(0,0,0,0.75);
+
+        &:hover {
+            background-color: #ff9bdb;
+        }
+    }
+}
+
+/** Footer Contact**/
+
+footer {
+    background-color: #08242c;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    line-height: 25px;
+
+    p {
+        color: white;
+        font-size: 18px;
+    }
+
+    a {
+        color: white;
+    }
+}
+
+.contact-container {
+    margin-bottom: 60px;
+}
+
+.footer-contact {
+    display: flex;
+    margin-bottom: 30px;
+
+    img {
+        height: 20px;
+        width: 20px;
+        margin-right: 25px;
+        margin-top: 4px;
+    }
+}
+
+/** Footer Links **/
+
+.footer-link {
+    
+    display: flex;
+    flex-direction: column;
+
+    a {
+        margin-bottom: 20px;
+        text-decoration: none;
+    }
+}
+
+/** Footer Socials **/
+
+.socials {
+    display: flex;
+    flex-direction: column;
+
+    p {
+        font-size: 13px;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+}
+
+.socials-image {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 20px;
+
+    a {
+        text-decoration: none;
+    }
+
+    img {
+        color: white;
+        height: 30px;
+        width: 30px;
     }
 }
