--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   background-repeat: no-repeat;
   font-size: 18px;
   margin: 0 auto;
-  width: 90%;
+  width: 100%;
 }
 
 img {
@@ -33,6 +33,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 5% 0 5%;
 }
 header img {
   height: 17px;
@@ -47,13 +48,12 @@ header a {
   border-radius: 30px;
   border: 1px solid #f2f2f2;
   text-decoration: none;
-  -webkit-box-shadow: 0px 0px 26px -11px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 26px -11px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 26px -11px rgba(0, 0, 0, 0.75);
 }
 
 /** Section 1 **/
 .section-1 {
+  padding: 0 5% 0 5%;
   text-align: center;
 }
 
@@ -93,6 +93,7 @@ header a {
 
 /** Section 2 **/
 .section-2 {
+  padding: 0 5% 0 5%;
   text-align: center;
   margin-top: 100px;
   margin-bottom: 140px;
@@ -104,8 +105,6 @@ header a {
   padding: 50px 45px 25px 45px;
   margin-bottom: 20px;
   margin-top: 40px;
-  -webkit-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
 }
 .section-2-info img {
@@ -130,10 +129,8 @@ header a {
   text-align: center;
   border: 1px solid #f2f2f2;
   border-radius: 15px;
-  padding: 50px 2px;
+  padding: 50px 5% 2px 5%;
   margin-bottom: 20px;
-  -webkit-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
 }
 .community h3 {
@@ -150,8 +147,6 @@ header a {
   border-radius: 30px;
   padding: 13px 50px;
   text-decoration: none;
-  -webkit-box-shadow: 0px 7px 13px -11px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 7px 13px -11px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 7px 13px -11px rgba(0, 0, 0, 0.75);
 }
 .community a:hover {
@@ -222,6 +217,4 @@ footer a {
   color: white;
   height: 30px;
   width: 30px;
-}
-
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
