--- a/styles.scss
+++ b/styles.scss
@@ -23,7 +23,7 @@ body {
     font-size: 18px;
     margin: 0 auto;
     // height: 100vh;
-    width: 90%;
+    width: 100%;
 }
 
 img {
@@ -48,6 +48,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 5% 0 5%;
 
     img {
         height: 17px;
@@ -72,6 +73,7 @@ header {
 /** Section 1 **/
 
 .section-1 {
+    padding: 0 5% 0 5%;
     text-align: center;
 }
 
@@ -119,13 +121,14 @@ header {
 /** Section 2 **/
 
 .section-2 {
+    padding: 0 5% 0 5%;
     text-align: center;
     margin-top: 100px;
     margin-bottom: 140px;
 }
 
 .section-2-info {
-
+    
     border: 1px solid #f2f2f2;
     border-radius: 15px;
     padding: 50px 45px 25px 45px;
@@ -163,7 +166,7 @@ header {
     text-align: center;
     border: 1px solid #f2f2f2;
     border-radius: 15px;
-    padding: 50px 2px;
+    padding: 50px 5% 2px 5%;
     margin-bottom: 20px;
     -webkit-box-shadow: 0px 0px 13px -9px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 13px -9px rgba(0,0,0,0.75);
