--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,6 @@ html {
 }
 
 body {
-  background-image: url("./images/bg-hero-mobile.svg");
-  background-repeat: no-repeat;
   font-size: 18px;
   margin: 0 auto;
   width: 100%;
@@ -26,10 +24,17 @@ h1, h2, h3, h4, h5, p {
   margin: 0;
 }
 
+.top-section-background {
+  background-image: url("./images/bg-hero-mobile.svg");
+  background-repeat: no-repeat;
+  background-color: #edfaff;
+  height: 780px;
+  padding-top: 25px;
+}
+
 /** Header **/
 header {
-  margin-top: 25px;
-  margin-bottom: 85px;
+  margin-bottom: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -48,6 +53,8 @@ header a {
   border-radius: 30px;
   border: 1px solid #f2f2f2;
   text-decoration: none;
+  -webkit-box-shadow: 0px 0px 26px -11px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 26px -11px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 26px -11px rgba(0, 0, 0, 0.75);
 }
 
@@ -73,6 +80,9 @@ header a {
   margin-bottom: 40px;
   font-weight: 400;
   font-size: 18px;
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .section-1-info a {
   color: white;
@@ -96,7 +106,7 @@ header a {
   padding: 0 5% 0 5%;
   text-align: center;
   margin-top: 100px;
-  margin-bottom: 140px;
+  margin-bottom: 50px;
 }
 
 .section-2-info {
@@ -105,6 +115,8 @@ header a {
   padding: 50px 45px 25px 45px;
   margin-bottom: 20px;
   margin-top: 40px;
+  -webkit-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
 }
 .section-2-info img {
@@ -129,8 +141,15 @@ header a {
   text-align: center;
   border: 1px solid #f2f2f2;
   border-radius: 15px;
-  padding: 50px 5% 2px 5%;
+  background-color: white;
+  padding: 40px 50px;
+  position: relative;
+  top: 70px;
   margin-bottom: 20px;
+  width: 93%;
+  margin: 0 auto;
+  -webkit-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 13px -9px rgba(0, 0, 0, 0.75);
 }
 .community h3 {
@@ -147,6 +166,8 @@ header a {
   border-radius: 30px;
   padding: 13px 50px;
   text-decoration: none;
+  -webkit-box-shadow: 0px 7px 13px -11px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 7px 13px -11px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 7px 13px -11px rgba(0, 0, 0, 0.75);
 }
 .community a:hover {
@@ -157,8 +178,8 @@ header a {
 footer {
   background-color: #08242c;
   font-family: "Open Sans", sans-serif;
-  font-weight: 400;
   line-height: 25px;
+  padding-top: 150px;
 }
 footer p {
   color: white;
@@ -167,9 +188,16 @@ footer p {
 footer a {
   color: white;
 }
+footer img {
+  width: 180px;
+  height: 28px;
+  margin-bottom: 20px;
+}
 
 .contact-container {
   margin-bottom: 60px;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .footer-contact {
@@ -184,6 +212,11 @@ footer a {
 }
 
 /** Footer Links **/
+.footer-link-container {
+  width: 90%;
+  margin: 0 auto;
+}
+
 .footer-link {
   display: flex;
   flex-direction: column;
@@ -208,7 +241,7 @@ footer a {
   display: flex;
   justify-content: center;
   gap: 10px;
-  margin-bottom: 20px;
+  margin-top: 30px;
 }
 .socials-image a {
   text-decoration: none;
@@ -217,4 +250,53 @@ footer a {
   color: white;
   height: 30px;
   width: 30px;
-}/*# sourceMappingURL=styles.css.map */
+}
+
+/** Media Query Desktop **/
+@media (min-width: 375px) {
+  /** Globals **/
+  /** Header **/
+  header {
+    margin-top: 30px;
+  }
+  header img {
+    width: 200px;
+    height: 30px;
+  }
+  header a {
+    padding: 18px 70px;
+    font-size: 18px;
+  }
+  /** Section 1 **/
+  .section-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .section-1 img {
+    width: 650px;
+  }
+  .section-1-info {
+    margin: 0;
+    text-align: left;
+    width: 600px;
+  }
+  .section-1-info h1, .section-1-info p, .section-1-info a {
+    margin: 0;
+    margin-bottom: 30px;
+  }
+  .section-1-info h1 {
+    font-size: 40px;
+    line-height: 60px;
+  }
+  .section-1-info p {
+    width: 550px;
+    margin-bottom: 50px;
+  }
+  .section-1-info a {
+    padding: 20px 60px;
+    font-size: 15px;
+  }
+}
+
+/*# sourceMappingURL=styles.css.map */
